force-app/main/default/objects/Delivery_Bay_Configuration__c/Delivery_Bay_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting used for Delivery Bay Bookings.</description>
    <label>Delivery Bay Configuration</label>
</CustomObject>