force-app/main/default/objects/Delivery_Bay_Configuration__c/fields/Email_Template_Cancel_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Cancel_Delivery__c</fullName>
    <label>Email Template Cancel Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>