force-app/main/default/objects/Delivery_Bay_Configuration__c/fields/Email_Template_Delivery_Bay_Booking__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Delivery_Bay_Booking__c</fullName>
    <label>Email Template Delivery Bay Booking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>