force-app/main/default/objects/Delivery_Bay_Configuration__c/fields/Location_QC_Complete__c.field-meta.xml
<CustomField>
    <fullName>Location_QC_Complete__c</fullName>
    <defaultValue>&apos;NCC-QCOK&apos;</defaultValue>
    <label>Location QC Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>